--- a/src/App.css
+++ b/src/App.css
@@ -97,11 +97,20 @@ color:#EBB752
 @media (min-width: 1200px) {
 .col-lg-4 {
     flex: 0 0 auto;
-    width: 30.9%;
+    width: 30.9% !important;
+    margin-left: 20px;
+}
+.col-lg-6 {
+   
+    width: 48% !important;
     margin-left: 20px;
 }
 .d-lg-flex{
   display: flex !important;
+}
+.transaction-body {
+    padding: 20px;
+    height: 240px !important;
 }
 }
 
@@ -112,6 +121,9 @@ color:#EBB752
 }
 .ml-0{
   margin-left: 0px;
+}
+.mr-10{
+  margin-right: 10px;
 }
 .flex-card{
 background-color: #626262;
@@ -141,6 +153,12 @@ button:hover{
         background: #EFEFEFD9 !important;
                 border-radius: 16px !important;
     }
+   
+}
+@media (min-width: 900px) {
+ .justify-content-start-sm{
+justify-content: start !important;
+}
 }
 .form-input{
       padding: 15px;
@@ -161,6 +179,8 @@ select{
     border: 0;
     box-shadow: 0 4px 4px 0 #00000040;
     width: 100%;
+} .justify-content-start-sm{
+justify-content: start !important;
 }
 .row{
 --bs-gutter-x: 1.5rem;
@@ -284,7 +304,7 @@ color: #F4BB4A;
 }
 .transaction-body{
   padding: 20px;
-  height: 240px;
+  /* height: 240px; */
 
 }
 ul{
@@ -294,4 +314,10 @@ ul{
 
 .text-black{
   color: #000000;
+}
+.col-12{
+width: 100% ;
+}
+.mb-2{
+  margin-bottom: 10px;
 }
