--- a/src/App.css
+++ b/src/App.css
@@ -321,3 +321,12 @@ width: 100% ;
 .mb-2{
   margin-bottom: 10px;
 }
+@media only screen 
+    and (max-device-width: 640px), 
+    only screen and (max-device-width: 667px), 
+    only screen and (max-width: 480px)
+{
+  .col-12{
+width: 100% ;
+}
+ }
